--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url}}">#ogh17</a>
 
     <nav class="site-nav">
       <span class="menu-icon">
@@ -14,11 +14,13 @@
       </span>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="#">Participer / Participate </a>
+        <a class="page-link" href="http://129.194.69.137/map/">Carte / Map</a>
+        <a class="page-link" href="{% post_url 2017-04-13-open_geneva_hackathons %}">A propos / About</a>
+        <a class="page-link" href="http://129.194.69.137/wiki/">Wiki</a>
+        {% include icon-twitter.html username=site.twitter_username %}
+        {% include icon-github.html username=site.github_username %}
+
       </div>
     </nav>
 
