added old frontpage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <div class="trigger">
         <a class="page-link" href="#">Participer / Participate </a>
         <a class="page-link" href="http://129.194.69.137/map/">Carte / Map</a>
-        <a class="page-link" href="{% post_url 2017-04-13-open_geneva_hackathons %}">A propos / About</a>
+        <a class="page-link" href="/about">A propos / About</a>
         <a class="page-link" href="http://129.194.69.137/wiki/">Wiki</a>
         {% include icon-twitter.html username=site.twitter_username %}
         {% include icon-github.html username=site.github_username %}
