--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,14 @@ layout: default
 ---
 
 <div class="home">
+<h2>Organisation</h2>
+<h3><a class="page-link" href={{ site.baseurl }}{% post_url 2017-04-12-agenda %}> Agenda / Schedule </a></h3>
+<h3><a class="page-link" href={{ site.baseurl }}{% post_url 2017-04-13-participer %}> Participer / Be Involved </a></h3>
+<h3><a class="page-link" href={{ site.baseurl }}{% post_url 2017-04-12-hackathons %}> Liste des Hackathons / List of Hackathons </a></h3>
+
+
+<br>
+<h2>News</h2>
 
   {{ content }}
 
