--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1774,6 +1774,28 @@
 				background:  #c3434c;
 			}
 
+    input[type="button"].style4,
+		input[type="submit"].style4,
+		input[type="reset"].style4,
+		button.style4,
+		.button.style4 {
+			background: #FFFFFF;
+			color: #3a3939;
+			box-shadow: inset 0 0 0 1px #FFFFFF;
+		}
+
+			input[type="button"].style4:hover,
+			input[type="submit"].style4:hover,
+			input[type="reset"].style4:hover,
+			button.style4:hover,
+			.button.style4:hover {
+				background:  none;
+        color: #fff !important;
+				text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25) !important;
+			}
+
+
+
 /* Box */
 
 	.box {
@@ -2020,7 +2042,7 @@
 		text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25);
 		text-align: center;
 		background: #c1efff url("images/banner.svg") bottom center no-repeat;
-		padding: 5em 0 5em 0;
+		padding: 2em 0 5em 0;
 		margin: 0;
 		background-size: 125% auto;
 	}
@@ -2041,7 +2063,7 @@
 			}
 
 		#banner p {
-			margin: 0;
+			margin: 0em 7em 0 7em;
 		}
 
 		#banner footer {
@@ -2286,6 +2308,7 @@
 }
 .mybanner{
 	text-align:center;
+  font-size:1.25rem;
 }
 .mysmall{
 	font-size:0.9rem;
@@ -2320,7 +2343,14 @@ span.stretch {
 .date {
 	font-family:'avenirlight';
 	font-size:3rem;
-	line-height:200%;
+	line-height:150%;
+	font-weight:600;
+}
+
+.edition {
+	font-family:'avenirlight';
+	font-size:1.8rem;
+	line-height:150%;
 	font-weight:600;
 }
 
